# robocup-software

./: .gitmodules
firmware/mbed-interface/: CMakeLists.txt
util/: gitslick.sh
